--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis:400,300,500);
+
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +11,7 @@
 body {
     height: 100vh;
     width: 100%;
-    display: flex;
+    display: block;
     place-items: center;
     background: beige;
 
@@ -26,6 +27,7 @@ body {
     background: #000;
     border-radius: 10px;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 .search-area ::placeholder {
@@ -58,79 +60,64 @@ body {
 }
 
 .output-container {
+
+    text-align: center;
+    padding: 10px;
     display: flex;
-    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     height: 300px;
     max-width: 750px;
     background: #000;
-    margin-top: 20px;
     border-radius: 10px;
+    margin: 0 auto;
+    box-shadow: 0 0 10px rgba(55, 55, 55, 0.5);
+
 }
 
 img {
-    margin-left: 15px;
-    position: absolute;
-    margin-top: 15px;
-    height: 200px;
-    width: 200px;
+    width: 80px;
+    height: 80px;
+    margin: 10px auto;
+    margin-top: -30px;
     border-radius: 50%;
-    border: 15px solid rgb(0, 140, 255);
+    border: 2px solid #fff;
+    transition: all 0.3s ease-in-out;
 }
 
 img:hover {
     cursor: pointer;
     transform: translateY(-10px) scale(1.2);
-  }
+}
 
 .username h1 {
-    position: absolute;
-    margin-top: 15px;
-    margin-left: 245px;
+    padding: 10px 60px;
     font-weight: 750;
     color: white;
 }
 
 .bio p {
-    font-size: 20px;
-    font-weight: 600;
-    margin-left: 245px;
-    width: 500px;
-    color: white;
-    margin-top: 75px;
-    position: absolute;
+    padding: 10px 60px;
+    letter-spacing: 0.6px;
+    font-weight: 300;
+    margin: 20px 0px;
+    color: #fff;
 }
 
+.info p {
+    padding: 2px 20px;
+    letter-spacing: 0.6px;
+    font-weight: 300;
+    margin: 20px 0px;
+    color: #fff;
+}
 
 info #followers {
     transition: all 0.2s ease-in-out;
 
 }
 
-.info ul {
-    position: absolute;
-    display: flex;
-    margin-top: 175px;
-    margin-left: 245px;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-}
-
-ul li {
-    display: flex;
-    text-align: right;
-    align-items: flex-end;
-    margin: 2px;
-    justify-content: space-between;
-    font-weight: 650;
-    color: white;
-    letter-spacing: 2px;
-    padding: 2px 5px;
-    background: #687fbd;
-    list-style: none;
-    font-size: 12px;
-    border-radius: 3px;
-}
 
 #output {
     display: none;
@@ -151,4 +138,80 @@ ul li {
     color: #000;
     margin-bottom: 50px;
 
+}
+
+
+
+.rounded-social-buttons {
+    padding-top: 30px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.rounded-social-buttons .social-button {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    width: 3.125rem;
+    height: 3.125rem;
+    border: 0.125rem solid transparent;
+    padding: 0;
+    text-decoration: none;
+    text-align: center;
+    color: #fefefe;
+    font-size: 1.5625rem;
+    font-weight: normal;
+    line-height: 2em;
+    border-radius: 1.6875rem;
+    transition: all 0.5s ease;
+    margin-right: 0.25rem;
+    margin-bottom: 0.25rem;
+}
+
+.rounded-social-buttons .social-button:hover,
+.rounded-social-buttons .social-button:focus {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+
+.rounded-social-buttons .fa-github,
+.fa-linkedin,
+.fa-envelope {
+    font-size: 25px;
+}
+
+.rounded-social-buttons .social-button.github {
+    background: #3b5998;
+}
+
+.rounded-social-buttons .social-button.github:hover,
+.rounded-social-buttons .social-button.github:focus {
+    color: #3b5998;
+    background: #fefefe;
+    border-color: #3b5998;
+}
+
+
+.rounded-social-buttons .social-button.linkedin {
+    background: #007bb5;
+}
+
+.rounded-social-buttons .social-button.linkedin:hover,
+.rounded-social-buttons .social-button.linkedin:focus {
+    color: #007bb5;
+    background: #fefefe;
+    border-color: #007bb5;
+}
+
+.rounded-social-buttons .social-button.mail {
+    background: #bb0000;
+}
+
+.rounded-social-buttons .social-button.mail:hover,
+.rounded-social-buttons .social-button.mail:focus {
+    color: #bb0000;
+    background: #fefefe;
+    border-color: #bb0000;
 }
