made changes to increase perfomance score

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Dosis:400,300,500);
+@import url(https://fonts.googleapis.com/css?family=Dosis:400,300,500&display=swap);
 
 * {
     margin: 0;
@@ -128,7 +128,7 @@ info #followers {
     display: flex;
     width: 100%;
     height: 60px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     justify-content: center;
 }
 
@@ -139,8 +139,6 @@ info #followers {
     margin-bottom: 50px;
 
 }
-
-
 
 .rounded-social-buttons {
     padding-top: 30px;
